src/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <description>Represents a product or service line item associated with a quote/proposal</description>
    <fields>
        <fullName>APTS_Adjustment_Amount__c</fullName>
        <formula>APTS_Base_Price__c -  Apttus_QPConfig__DerivedFromId__r.APTS_Unit_Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Amount*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_New_Net_price__c</fullName>
        <formula>Apttus_QPConfig__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Net price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Discount__c</fullName>
        <inlineHelpText>Standard  Discount fetched from SAP.</inlineHelpText>
        <label>Standard Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price__c</fullName>
        <formula>Apttus_QPConfig__BasePrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Standard_Discount_Format__c</fullName>
        <formula>IF(APTS_LP_Standard_Discount__c &lt; 0.1, LEFT(SUBSTITUTE(TEXT(APTS_LP_Standard_Discount__c * 100), &quot;.&quot;, &quot;,&quot;), 4), LEFT(SUBSTITUTE(TEXT(APTS_LP_Standard_Discount__c * 100), &quot;.&quot;, &quot;,&quot;), 5))</formula>
        <label>Standard Discount Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Percentage__c</fullName>
        <description>Field to hold the value of percentage of discount applied to the line item when selected discount type is either &quot;Substitute Discount&quot; or &quot;Additional Discount&quot;.</description>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <description>Field used by user to select appropriate type of discount in line item.</description>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Price Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <formula>IF( Apttus_QPConfig__NetAdjustmentPercent__c=0, APTS_Discount_Percentage__c, APTS_Net_Adjustment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Code__c</fullName>
        <description>Hierarchy Level 3 Code of Product</description>
        <formula>Apttus_Proposal__Product__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTV Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.APTS_GTV_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTV Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Product_Code__c</fullName>
        <formula>IF(Apttus_Proposal__Product__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;, Apttus_Proposal__Product__r.APTS_Global_Product_ID__r.APTS_ABB_Global_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_3_Code__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level 3 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_3_Code_text__c</fullName>
        <label>Hierarchy Level 3 Code text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Name__c</fullName>
        <formula>IF(Apttus_Proposal__Product__r.APTS_LP_Is_Hierarchy__c,  Apttus_Proposal__Product__r.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Net__c</fullName>
        <inlineHelpText>Standard Net price returned from SAP per product.</inlineHelpText>
        <label>Standard Net</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Total_Standard_Price__c</fullName>
        <label>Total Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Price__c</fullName>
        <label>Unit Of Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Number_Custom__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Hierarchy_Information__c</fullName>
        <formula>If( APTS_Product_Is_Hierarchy__c= True, APTS_Hierarchy_Name__c &amp; BR() &amp; &apos;Hierarchy Code:&apos; &amp; CASE(Apttus_Proposal__Product__r.APTS_Hierarchy_Level__c,2, Apttus_Proposal__Product__r.APTS_LP_Product_Hierarchy__c,3,Apttus_Proposal__Product__r.APTS_Hierarchy_Level_3_Code__c,4, Apttus_Proposal__Product__r.APTS_Hierarchy_Level_4_Code__c,NULL), APTS_Product_Description__c &amp; BR() &amp; &apos;Hierarchy Code:&apos;&amp; Apttus_Proposal__Product__r.APTS_Hierarchy_Level_3_Code__c &amp; BR() &amp; &apos;Local Code:&apos; &amp; APTS_Local_Product_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product/Hierarchy Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Product_Code__c</fullName>
        <formula>IF(Apttus_Proposal__Product__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;, Apttus_Proposal__Product__r.APTS_Product_ID__c )</formula>
        <label>Local Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Percentage__c</fullName>
        <formula>IF( ISPICKVAL( APTS_Discount_Type__c , &apos;Substitute Discount&apos;) , 
APTS_Discount_Percentage__c 
,IF(ISPICKVAL( APTS_Discount_Type__c , &apos;Additional Discount&apos;), 
APTS_Discount_Percentage__c + APTS_LP_Standard_Discount__c , 
IF(ISPICKVAL( APTS_Discount_Type__c , &apos;Net Price Discount&apos;), 
Apttus_QPConfig__NetAdjustmentPercent__c * -1, NULL) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adj. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment__c</fullName>
        <formula>ABS(Apttus_QPConfig__NetAdjustmentPercent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adjustment* (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override__c</fullName>
        <description>Field to hold the new price value (to override existing price value) for the line item when selected discount type is &quot;Net Price Discount&quot; in line item.</description>
        <label>Net Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <description>this is used somewhere on rollup summery fields so cannot use this field on report</description>
        <formula>Apttus_QPConfig__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Description__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Hierarchy_Code__c</fullName>
        <formula>Apttus_Proposal__Product__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Id__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Is_Hierarchy__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Is Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Product_is_GTV_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Product is GTV Product or not. Used for Template in Proposal Object (Roll-up Summary)</description>
        <label>Product is GTV Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <formula>Apttus_QPConfig__Quantity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Standard_Discount__c</fullName>
        <inlineHelpText>Standard  Discount fetched from SAP.</inlineHelpText>
        <label>Standard Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Quote_Price__c</fullName>
        <label>Total Quote Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_new_product_code__c</fullName>
        <inlineHelpText>Summary of the Product and Hierarchy information , for a given line item.</inlineHelpText>
        <label>Product/Hierarchy Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>R3v1 - Its Used for CQP Integration</description>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>AP.305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.332</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.333</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.334</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.335</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.336</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.337</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.338</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Description__c</fullName>
        <description>The line description</description>
        <inlineHelpText>Its Used for CQP Integration</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Ext_Net_Price__c</fullName>
        <formula>Apttus_Proposal__Unit_Net_Price__c  *  Apttus_Proposal__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Ext_Price__c</fullName>
        <formula>Apttus_Proposal__Quantity__c  *  Apttus_Proposal__Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>R00N70000001yUfPEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Proposal__c</fullName>
        <description>ID of the associated quote/proposal</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>R00N70000001yUfBEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Quantity__c</fullName>
        <inlineHelpText>Its Used for CQP Integration</inlineHelpText>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Sales_Discount__c</fullName>
        <label>Sales Discount</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Unit_Net_Price__c</fullName>
        <formula>Apttus_Proposal__Unit_Price__c  * (1 -  Apttus_Proposal__Sales_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPApprov__Approval_Status__c</fullName>
        <description>The approval status of the quote/proposal line item</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Price Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Factor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the asset associated with the product</description>
        <inlineHelpText>ID of the asset associated with the product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item from which the line item is created.</description>
        <inlineHelpText>ID of the associated asset line item from which the line item is created.</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AttributeValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute value</description>
        <label>Attribute Value</label>
        <referenceTo>Apttus_QPConfig__ProposalProductAttributeValue__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AutoActivateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the order line item associated with the proposal line item will be automatically activated when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether the order line item associated with the proposal line item will be automatically activated when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Activate Order ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AutoCreateBill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether billing schedules would be created for the order line item associated with the proposal line item when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether billing schedules would be created for the order line item associated with the proposal line item when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Create Bill ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AutoCreateRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether revenue schedules would be created for the order line item associated with the proposal line item when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether revenue schedules would be created for the order line item associated with the proposal line item when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Create Revenue ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BaseCostOverride__c</fullName>
        <description>The base cost overridden by the user</description>
        <inlineHelpText>The base cost overridden by the user</inlineHelpText>
        <label>Base Cost (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BaseCost__c</fullName>
        <description>The base cost is Cost + Automatic Adjustments for individual products and options</description>
        <inlineHelpText>The base cost is Cost + Automatic Adjustments for individual products and options</inlineHelpText>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BaseExtendedCost__c</fullName>
        <description>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</description>
        <inlineHelpText>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</inlineHelpText>
        <label>Base Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BaseExtendedPrice__c</fullName>
        <description>The base extended price is Quantity X Term (if applicable) X (Base Price + Price Adjustment) for individual products and options</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BasePriceMethod__c</fullName>
        <description>The base price method</description>
        <label>Base Price Method</label>
        <picklist>
            <picklistValues>
                <fullName>Per Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BasePriceOverride__c</fullName>
        <description>The base price overridden by the user</description>
        <inlineHelpText>The base price overridden by the user</inlineHelpText>
        <label>Base Price (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product.</description>
        <inlineHelpText>Its Used for CQP Integration</inlineHelpText>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Proposal Line Items (Base Product)</relationshipLabel>
        <relationshipName>BaseProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account associated with the line item</description>
        <inlineHelpText>ID of the bill to account associated with the line item</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Line Items (Bill To)</relationshipLabel>
        <relationshipName>QuoteLineItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillingPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing plan</description>
        <inlineHelpText>ID of the associated billing plan</inlineHelpText>
        <label>Billing Plan</label>
        <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Bill In Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill In Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ChargeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ChargeType__c</fullName>
        <description>The charge type associated with the product or service</description>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>License Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ClassificationHierarchy__c</fullName>
        <description>The category hierarchy</description>
        <label>Category Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product category</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Comments__c</fullName>
        <description>Memo text entered by the user</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__CommitmentQuantity__c</fullName>
        <description>The quantity commitment associated with the product or option</description>
        <inlineHelpText>The quantity commitment associated with the product or option</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
</CustomObject>